src/objects/Reference__c.object
<CustomObject>
    <fields>
        <fullName>Ability_To_Accomplish_Goals__c</fullName>
        <label>Ability To Accomplish Goals</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ability_To_Lead__c</fullName>
        <label>Ability To Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor leader, incapable of directing others</fullName>
                </value>
                <value>
                    <fullName>Usually follows the lead of others</fullName>
                </value>
                <value>
                    <fullName>Normally successful in directing and influencing others</fullName>
                </value>
                <value>
                    <fullName>Very successful in leading others</fullName>
                </value>
                <value>
                    <fullName>Exceptional leader, inspires others along desirable lines of action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Academic_Ability__c</fullName>
        <label>Academic Ability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Academic_Competence__c</fullName>
        <label>Academic Competence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Academic_Studies__c</fullName>
        <label>Academic Studies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does poorly on exams and assignments</fullName>
                </value>
                <value>
                    <fullName>Usually is a weak student in academic studies</fullName>
                </value>
                <value>
                    <fullName>Average in academic studies</fullName>
                </value>
                <value>
                    <fullName>Strong in academic studies</fullName>
                </value>
                <value>
                    <fullName>Exceptionally strong in academic studies</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Areas_Of_Growth__c</fullName>
        <label>Areas Of Growth</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BUILD_Describe_Benefit__c</fullName>
        <description>BUILD Reference question: Please describe why you think the applicant would benefit from a post-secondary education experience.</description>
        <label>BUILD Describe Benefit</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BUILD_How_Do_You_Know__c</fullName>
        <description>BUILD reference question: How do you know the applicant?</description>
        <label>BUILD How Do You Know?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Church</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BUILD_How_Long_Description__c</fullName>
        <description>BUILD reference question: How long have you known the applicant and in what capacity?</description>
        <label>BUILD How Long Description</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_City__c</fullName>
        <label>Business/Organization City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business/Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_State__c</fullName>
        <label>Business/Organization State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Christian_Faith_And_Commitment__c</fullName>
        <label>Christian Faith And Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comfortable_With_Position__c</fullName>
        <label>Comfortable With Position</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_On_Abilities__c</fullName>
        <label>Comment On Abilities</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_On_Christian_Commitment__c</fullName>
        <label>Comment On Christian Commitment</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_On_InterculturalSkills__c</fullName>
        <label>Comment On Intercultural_Skills</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_On_Interpersonal_Skills__c</fullName>
        <label>Comment On Interpersonal Skills</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_On_Scholastic_Skills__c</fullName>
        <label>Comment On Scholastic Skills</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_On_Strengths__c</fullName>
        <label>Comment On Strengths</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_On_Weaknesses__c</fullName>
        <label>Comment On Weaknesses</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_On_Work__c</fullName>
        <label>Comment On Work</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Skills__c</fullName>
        <label>Communication Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Has limited communication with others</fullName>
                </value>
                <value>
                    <fullName>Responds when spoken to, but does not initiate communication</fullName>
                </value>
                <value>
                    <fullName>Usually able to communicate effectively with others</fullName>
                </value>
                <value>
                    <fullName>Has strong skills in communicating with others</fullName>
                </value>
                <value>
                    <fullName>Has exceptional skills in communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Verbal_Written_Skills__c</fullName>
        <label>Communication Skills (Verbal &amp; Written)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conflict_Management_Skills__c</fullName>
        <label>Conflict Management Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Solutions__c</fullName>
        <label>Creative Solutions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Is unable to offer creative solutions</fullName>
                </value>
                <value>
                    <fullName>Rarely offers creative solutions</fullName>
                </value>
                <value>
                    <fullName>Sometimes is able to offer creative solutions</fullName>
                </value>
                <value>
                    <fullName>Often able to offer creative solutions</fullName>
                </value>
                <value>
                    <fullName>Consistently able to offer creative solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creativity__c</fullName>
        <label>Creativity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Ability__c</fullName>
        <label>Decision-Making Ability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Making__c</fullName>
        <label>Decision Making</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Has poor decision-making and judgment skills</fullName>
                </value>
                <value>
                    <fullName>Has inconsistent decision-making and judgment skills</fullName>
                </value>
                <value>
                    <fullName>Generally has good decision-making and judgment skills</fullName>
                </value>
                <value>
                    <fullName>Makes good decisions and shows good judgment</fullName>
                </value>
                <value>
                    <fullName>Has exceptional decision-making and judgment skills</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demonstrate_Faith__c</fullName>
        <label>Demonstrate Faith</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fifteen_Hours_Commitment_Comment__c</fullName>
        <label>Fifteen Hours Commitment Comment</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fifteen_Hours_Commitment__c</fullName>
        <label>Fifteen Hours Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flexibility__c</fullName>
        <label>Flexibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Four_Year_Commitment__c</fullName>
        <label>Four Year Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Long__c</fullName>
        <label>How Long Have You Known Applicant?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;1 year</fullName>
                </value>
                <value>
                    <fullName>1-2 years</fullName>
                </value>
                <value>
                    <fullName>3-5 years</fullName>
                </value>
                <value>
                    <fullName>5+ years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Responsible__c</fullName>
        <label>How Responsible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Irresponsible even under supervisions</fullName>
                </value>
                <value>
                    <fullName>With constant supervision will do satisfactory work</fullName>
                </value>
                <value>
                    <fullName>Usually needs detailed instructions with regular checks of work</fullName>
                </value>
                <value>
                    <fullName>Carries out routine activity on own responsibility</fullName>
                </value>
                <value>
                    <fullName>Exceptionally able to accomplish work without close supervision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Well__c</fullName>
        <label>How Well Do You Know Applicant?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very well</fullName>
                </value>
                <value>
                    <fullName>Fairly well</fullName>
                </value>
                <value>
                    <fullName>Not well at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiative_And_Perserverance__c</fullName>
        <label>Initiative And Perserverance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrity__c</fullName>
        <label>Integrity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intensive_Commitment_Comment__c</fullName>
        <label>Intensive Commitment Comment</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intensive_Commitment__c</fullName>
        <label>Intensive Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intercultural_Competence__c</fullName>
        <label>Intercultural Competence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interpersonal_Skills__c</fullName>
        <label>Interpersonal Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Seminary_Next_Step__c</fullName>
        <label>Is Seminary Next Step</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leadership_Comments__c</fullName>
        <label>Leadership Comments</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Leadership_Potential__c</fullName>
        <label>Leadership Potential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leadership_Skills__c</fullName>
        <label>Leadership Skills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leadership__c</fullName>
        <label>Leadership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mentorship_Comments__c</fullName>
        <label>Mentorship Comments</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mentorship__c</fullName>
        <label>Mentorship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Org_URL__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Previous_Id__c)), 
&quot;https://bethel-university-old.my.salesforce.com/&quot;+ Previous_Id__c, 
&quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Org URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oral_Communication_Skills__c</fullName>
        <label>Oral Communication Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Maturity__c</fullName>
        <label>Personal Maturity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plans_Of_Support__c</fullName>
        <label>Plans Of Support</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <description>Specifies a previous id if any</description>
        <externalId>true</externalId>
        <label>Previous Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>React_To_Criticism__c</fullName>
        <label>React To Criticism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Takes criticism as a personal insult</fullName>
                </value>
                <value>
                    <fullName>Resents suggestions</fullName>
                </value>
                <value>
                    <fullName>Listens to suggestions, but may act without considering them</fullName>
                </value>
                <value>
                    <fullName>Follows suggestions willingly</fullName>
                </value>
                <value>
                    <fullName>Asks for criticisms and suggestions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Readiness_For_Ministry__c</fullName>
        <label>Readiness For Ministry</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommend__c</fullName>
        <label>Recommend?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, without reservation</fullName>
                </value>
                <value>
                    <fullName>Yes, with reservation</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship To Applicant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Research_Projects__c</fullName>
        <label>Research Projects</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Confidence__c</fullName>
        <label>Self-Confidence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significantly Above Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Significantly Below Average</fullName>
                </value>
                <value>
                    <fullName>Not Observed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>